<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.se.music.fragment.MainFragment">

    <com.bytedance.scene.ui.view.StatusBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/medium_sea_green"
        android:gravity="center"
        android:minHeight="@dimen/tool_bar_height">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tool_bar_mine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="@dimen/main_tool_bar_title_padding"
                android:paddingRight="@dimen/main_tool_bar_title_padding"
                android:text="@string/mine"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tool_bar_music_room"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="@dimen/main_tool_bar_title_padding"
                android:paddingRight="@dimen/main_tool_bar_title_padding"
                android:text="@string/music_room"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tool_bar_find"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="@dimen/main_tool_bar_title_padding"
                android:paddingRight="@dimen/main_tool_bar_title_padding"
                android:text="@string/find"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.se.music.widget.loading.LoadingView
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>
